<resources>
    <string name="app_name">MyFriendz</string>
    <string name="login">Iniciar Sessão</string>
    <string name="alterarPino">alterar Pino</string>
    <string name="erro">Deu Erro</string>
    <string name="loginvalido">Login Válido</string>
    <string name="logininvalido">login Invalido</string>
    <string name="novo_pino">Introduza novo Pino</string>
    <string name="confirme_pino">Confirme novo Pino</string>
    <string name="voltar">Voltar</string>
    <string name="pinoalterado">Pino Alterado</string>
    <string name="autor" translatable="false">Rui Manuel de Oliveira Pereira</string>
    <string name="nota">10 Valores</string>
    <string name="pinosnaocorrespondem">pinos nao correspondem</string>
    <string name="lista_de_contactos">Lista de Contactos</string>
    <string name="sexoinvalido">\"Caractere inválido na definição do Sexo\"</string>
    <string name="sexo_invalido">Caractere inválido na definição do Sexo</string>
    <string name="nome">nome</string>
    <string name="introNome">Introduza o nome</string>
    <string name="morada">morada</string>
    <string name="introMorada">Introduza a Morada</string>
    <string name="introNasc">Introduza a Data de Nascimento</string>
    <string name="nasc">1900-01-01</string>
    <string name="detalhe_de_contacto">Detalhe de Contacto</string>
    <string name="introTelefone">Introduza o Telefone</string>
    <string name="telefone">+351911791682</string>
    <string name="telemovel">Telemóvel</string>
    <string name="introTelemovel">Introduza o Telemóvel</string>
    <string name="introEmail">Introduza o Email</string>
    <string name="email">Email</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="sobre">Sobre</string>
    <string name="Endereco_email">rui.o.pereira@gmail.com</string>
    <string name="num_telemovel">+351911791682</string>
    <string name="calculadoautomaticamente">calculado automaticamente</string>
    <string name="idade">0 Anos</string>
    <string name="anos">Anos</string>
    <string name="novo">Novo</string>
    <string name="gravar">Gravar</string>
    <string name="registoalterado">registo alterado</string>
    <string name="registoigual">Registo Igual</string>
    <string name="remover">Remover</string>
    <string name="posicaodoregisto">Posicao Do Registo</string>
    <string name="operacao">Operação</string>
    <string name="pino" translatable="false">1234</string>
    <string name="introduza_o_pino">Introduza o Pino</string>
    <string name="operacaoinvalida">Operação Inválida</string>
    <string name="Definicoes">Definições</string>
    <string name="rotuloautor">Autor</string>
    <string name="rotuloautoavaliacao">Auto-Avaliacao</string>
    <string name="ligar">Chamar</string>
    <string name="OrdenarAscendente">Ord Ascend</string>
    <string name="OrdenarDescendente">Ord Descend</string>
    <string name="introCC">Introduza o Cartão de Cidadão</string>
    <string name="cc">Cartão de Cidadão</string>
    <string name="duplicado">duplicado</string>
    <string name="CCInvalido">Cartão de Cidadão Inválido</string>
    <string name="camara">Máquina fotográfica</string>
    <string name="galeria">Galeria de Fotos</string>
</resources>