<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".Definicoes">

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Definicoes"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_pino1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/novo_pino"
            android:inputType="numberPassword"
            android:textAlignment="textEnd"
            android:textSize="35sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_pino2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirme_pino"
            android:inputType="numberPassword"
            android:textAlignment="textEnd"
            android:textSize="35sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_alterar_pino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alterarPino" />
</LinearLayout>