<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_sobre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|start"
    android:orientation="vertical"
    tools:context=".Sobre">

    <LinearLayout
        android:id="@+id/ll_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/voltar" />

        <ImageView
            android:id="@+id/img_seta_baixo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ordemsetabaixo" />

        <ImageView
            android:id="@+id/img_seta_cima"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ordemsetacima" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="90dp"
        android:text="@string/sobre"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="-4dp"
        android:fontFamily="sans-serif-black"
        android:padding="30dp"
        android:text="@string/autor"
        android:textAlignment="textEnd"
        android:textColor="@color/vermelho"
        android:textSize="20dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="130dp"
        android:fontFamily="casual"
        android:text="@string/rotuloautor"
        android:textAlignment="textStart"
        android:textColor="@color/cinzento"
        android:textSize="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="casual"
        android:text="@string/rotuloautoavaliacao"
        android:textAlignment="center"
        android:textColor="@color/cinzento"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="360dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/nota"
        android:textAlignment="textStart"
        android:textColor="@color/azul"
        android:textSize="30dp"
        android:textStyle="italic" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/canto" />
</RelativeLayout>